--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ img {
 
 #logo-img {
     padding: 80px 0;
-    margin-top: 30px;
+    margin-top: 35px;
+    margin-bottom: 20px;
     width: 100%;
     height: 120px;
     display: flex;
@@ -63,8 +64,9 @@ img {
 }
 
 #list-btns {
-    margin-top: 20px;
+    margin-top: 25px;
     width: 100%;
+    margin-bottom: 20px;
 }
 
 #list-btns li {
